--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">HomeBase</string>
+    <string name="role_format">(%1$s)</string>
+    <string name="error_generic">An unknown error has occurred. Please try again!</string>
 </resources>
